[package]
name = "passvault"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10"
rand = "0.8"
pbkdf2 = "0.12"
rpassword = "7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
arboard = "3.2"
eframe = "0.27"
egui = "0.27"
libreauth = "0.17"
reqwest = { version = "0.11", features = ["blocking", "json"] }
csv = "1.3"
sha2 = "0.10"
